# categories_api_test_job

./: .gitignore  manage.py  pyproject.toml
categories_api_test_job/: settings.py  urls.py  wsgi.py
simple_categories_app/: apps.py  decorators.py  models.py  serializers.py  urls.py  views.py
simple_categories_app/migrations/: 0001_initial.py
