[tool.poetry]
name = "categories_api_test_job"
version = "0.1.0"
description = "test job"
authors = ["Mikhail Klimovich <mikhail12klimovich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
